sprout: fix glitch on screen off

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -80,7 +80,7 @@
     <bool name="config_sip_wifi_only">false</bool>
 
     <!-- Enable the electron beam -->
-    <bool name="config_animateScreenLights">true</bool>
+    <bool name="config_animateScreenLights">false</bool>
 
     <!-- Remote server that can provide NTP responses. -->
     <string translatable="false" name="config_ntpServer">ntp.nict.jp</string>
