sprout: Update power profile for Pie
* Match the changes made in LineageOS/android_frameworks_base@3d422c3

* Since Pie, AOSP is forcing us to define speeds and power values per CPU cluster.
  For single cluster chipsets like MSM8974, define cluster0 with only 4 cores
  to retain the existing behaviour.

[yodevil]
* Also, cpu.idle became cpu.suspend

Change-Id: Ida1edb9cc0335ffdb0ec6857da02b84a6a9d1633
Signed-off-by: SamarV-121 <samarvispute121@gmail.com>

--- a/overlay/frameworks/base/core/res/res/xml/power_profile.xml
+++ b/overlay/frameworks/base/core/res/res/xml/power_profile.xml
@@ -17,14 +17,15 @@
         <value>1.5</value>
         <value>1.5</value>
     </array>
-    <array name="cpu.speeds">
+    <item name="cpu.clusters.cores">4</item>
+    <array name="cpu.core_speeds.cluster0">
         <value>1209000</value>
         <value>988000</value>
         <value>754000</value>
         <value>497250</value>
     </array>
-    <item name="cpu.idle">2.0</item>
-    <array name="cpu.active">
+    <item name="cpu.suspend">2.0</item>
+    <array name="cpu.core_power.cluster0">
         <value>120</value>
         <value>98</value>
         <value>75</value>
