sprout: Enable link probing
Set "link probing supported" flag to true for marlin.

Bug: 112029045
Test: run `adb root; adb shell cmd wifi send-link-probe`
Change-Id: Id93b5a9c14e7586c6f3552aeece28b998b46c40e
Signed-off-by: SamarV-121 <samarv121@pixelexperience.org>

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -274,4 +274,7 @@
          don't support RIL_REQUEST_GET_RADIO_CAPABILITY
          format is UMTS|LTE|... -->
     <string translatable="false" name="config_radio_access_family">GSM|WCDMA</string>
+
+    <!-- True if the firmware supports Wi-Fi link probing -->
+    <bool name="config_wifi_link_probing_supported">true</bool>
 </resources>
